Ajout des tests unitaires gestion utilisateur